# trait-interaction-studies

./: .gitignore  README.md  ablation_stats.py  ablation_study.py  build_factorial_dataset.py  build_factorial_dataset_eviluser.py  build_refusal_dataset.py  command_log.md  compare_ai_persona_overlay.py  extract_refusal_direction.py  factorial_residue.py  interaction_tensor.py  localize_combiner.py  localize_heads.py  make_plots.py  metrics.py  per_prompt_leakage.py  pipeline.py  plotting_utils.py  promptwise_pca_analysis.py  pyproject.toml  refusal_cosines.py  run.sh  score_ablation_outputs.py  trait_leakage.py  viz_role_heads.py
configs/: pipeline_experiment_large_example.json
output/leakage_Qwen2.5-7B/: evil_leakage.csv  evil_leakage_summary.txt  evil_shared_leak_response_avg_diff.pt
output/leakage_Qwen2.5-7B-Instruct/: evil_leakage.csv  evil_leakage_summary.txt  evil_shared_leak_response_avg_diff.pt
output/leakage_Qwen2.5-7B-Instruct-ablated_roleheads/: evil_leakage.csv  evil_leakage_summary.txt  evil_shared_leak_response_avg_diff.pt
output/leakage_per_prompt/Qwen2.5-7B/: effrank_comparison.csv  leakage_bootstrap.csv  per_prompt_leakage_distribution.csv
output/leakage_per_prompt/Qwen2.5-7B-Instruct/: effrank_comparison.csv  leakage_base_vs_instruct.csv  leakage_bootstrap.csv  per_prompt_leakage_distribution.csv
output/localize/evilai_instruct/: component_attribution.csv  patch_total_effect.csv
output/localize/eviluser_instruct/: component_attribution.csv
output/localize_heads/Qwen2.5-7B-Instruct/: per_head_attribution.csv  role_head_attention_spans.csv
output/metrics_factorial_Qwen2.5-7B/: fac_evil_ai_humor_user_bootstrap_ci.csv  fac_evil_ai_humor_user_effrank.csv  fac_evil_ai_humor_user_metrics_summary.txt  fac_evil_ai_humor_user_per_layer_metrics.csv  fac_evil_ai_humor_user_permutation_null.csv  fac_evil_ai_humor_user_projection_on_residue.csv  fac_evil_ai_humor_user_refusal_cosines.csv  fac_evil_ai_humor_user_tau_vectors.npz  fac_humor_evil_user_bootstrap_ci.csv  fac_humor_evil_user_effrank.csv  fac_humor_evil_user_metrics_summary.txt  fac_humor_evil_user_per_layer_metrics.csv  fac_humor_evil_user_permutation_null.csv  fac_humor_evil_user_projection_on_residue.csv  fac_humor_evil_user_refusal_cosines.csv  fac_humor_evil_user_tau_vectors.npz
output/metrics_factorial_Qwen2.5-7B-Instruct/: fac_evil_ai_humor_user_bootstrap_ci.csv  fac_evil_ai_humor_user_effrank.csv  fac_evil_ai_humor_user_metrics_summary.txt  fac_evil_ai_humor_user_per_layer_metrics.csv  fac_evil_ai_humor_user_permutation_null.csv  fac_evil_ai_humor_user_projection_on_residue.csv  fac_evil_ai_humor_user_tau_vectors.npz  fac_humor_evil_user_bootstrap_ci.csv  fac_humor_evil_user_effrank.csv  fac_humor_evil_user_metrics_summary.txt  fac_humor_evil_user_per_layer_metrics.csv  fac_humor_evil_user_permutation_null.csv  fac_humor_evil_user_projection_on_residue.csv  fac_humor_evil_user_tau_vectors.npz
output/metrics_factorial_Qwen2.5-7B-Instruct-ablated_roleheads/: fac_evil_ai_humor_user_bootstrap_ci.csv  fac_evil_ai_humor_user_effrank.csv  fac_evil_ai_humor_user_metrics_summary.txt  fac_evil_ai_humor_user_per_layer_metrics.csv  fac_evil_ai_humor_user_permutation_null.csv  fac_evil_ai_humor_user_projection_on_residue.csv  fac_evil_ai_humor_user_tau_vectors.npz  fac_humor_evil_user_bootstrap_ci.csv  fac_humor_evil_user_effrank.csv  fac_humor_evil_user_metrics_summary.txt  fac_humor_evil_user_per_layer_metrics.csv  fac_humor_evil_user_permutation_null.csv  fac_humor_evil_user_projection_on_residue.csv  fac_humor_evil_user_tau_vectors.npz
output/viz_role_heads/: role_head_attention_compare.csv
persona_steering/: factorial_residue.py  generate_vec.py  judge.py  main.py  parse_nb.py  training.py  utils.py
persona_steering/data_generation/: generate_persona_combo_datasets.py
persona_steering/data_generation/old_trait_data_eval/: humorous_ai_user_evil.json  humorous_dev.json  humorous_test.json  impolite_dev.json  impolite_test.json  impolite_tiny.json  user_evil.json  user_evil_fewshot.json
persona_steering/data_generation/old_trait_data_extract/: competitive.json  humorous.json  impolite.json  orig_ai_humorous_questions.txt  orig_humorous.json  orig_polite.json  polite_ai_user_impolite_fewshot.json  user_humorous.json  user_impolite.json  user_impolite_fewshot.json  user_impolite_tiny.json
persona_steering/data_generation/refusal/: refusal.json
persona_steering/data_generation/trait_data_eval/: humorous_ai_user_evil.json  orig_humorous.json  user_humorous.json
persona_steering/data_generation/trait_data_extract/: evil_ai_humorous_user.json  fac_evil_ai_humor_user_nn.json  fac_evil_ai_humor_user_np.json  fac_evil_ai_humor_user_pn.json  fac_evil_ai_humor_user_pp.json  fac_humor_evil_ai_nn.json  fac_humor_evil_ai_np.json  fac_humor_evil_ai_pn.json  fac_humor_evil_ai_pp.json  fac_humor_evil_user_nn.json  fac_humor_evil_user_np.json  fac_humor_evil_user_pn.json  fac_humor_evil_user_pp.json  orig_evil.json  user_evil.json
persona_steering/eval/: eval_persona.py  model_utils.py  prompts.py
persona_steering/eval_persona_eval/multiturn_evil_user/: evil_user_layer15_coef0_neg_turns3.jsonl  evil_user_layer15_coef0_pos_turns3.jsonl  evil_user_layer15_coef2_neg_turns3.jsonl  evil_user_layer15_coef2_pos_turns3.jsonl  evil_user_layer17_coef0_neg_turns3.jsonl  evil_user_layer17_coef0_pos_turns3.jsonl  evil_user_layer17_coef2.5_neg_turns3.jsonl  evil_user_layer17_coef2.5_pos_turns3.jsonl  evil_user_layer17_coef2_neg_turns3.jsonl  evil_user_layer17_coef2_pos_turns3.jsonl  evil_user_layer17_coef3_neg_turns3.jsonl  evil_user_layer17_coef3_pos_turns3.jsonl  evil_user_layer19_coef0_neg_turns3.jsonl  evil_user_layer19_coef0_pos_turns3.jsonl  (+15 more)
persona_steering/scripts/: cal_projection.sh  eval_persona.sh  eval_steering.sh  generate_vec.sh
persona_steering/unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py
(+185 files in other folders)
