[project]
name = "personas-spar25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.7.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "airportsdata==20250909",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "astor==0.8.1",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "backoff==2.2.1",
    "bitsandbytes==0.45.5",
    "blake3==1.0.8",
    "cachetools==6.2.4",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "comm==0.2.3",
    "compressed-tensors==0.9.3",
    "contourpy==1.3.3",
    "cupy-cuda12x==13.6.0",
    "cut-cross-entropy==25.1.1",
    "cycler==0.12.1",
    "datasets==3.6.0",
    "debugpy==1.8.19",
    "decorator==5.2.1",
    "deprecated==1.3.1",
    "depyf==0.18.0",
    "diffusers==0.36.0",
    "dill==0.3.8",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "einops==0.8.1",
    "email-validator==2.3.0",
    "executing==2.2.1",
    "fastapi==0.128.0",
    "fastapi-cli==0.0.20",
    "fastapi-cloud-cli==0.8.0",
    "fastar==0.8.0",
    "fastrlock==0.8.3",
    "filelock==3.20.2",
    "fire==0.7.0",
    "fonttools==4.61.1",
    "frozenlist==1.8.0",
    "fsspec==2025.3.0",
    "gguf==0.17.1",
    "googleapis-common-protos==1.72.0",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "hf-transfer==0.1.9",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "importlib-metadata==8.0.0",
    "interegular==0.3.3",
    "ipykernel==7.1.0",
    "ipython==9.9.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.7.0",
    "jupyter-core==5.9.1",
    "jupyterlab-widgets==3.0.16",
    "kiwisolver==1.4.9",
    "lark==1.2.2",
    "llguidance==0.7.30",
    "llvmlite==0.44.0",
    "lm-format-enforcer==0.10.12",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mistral-common==1.8.8",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "msgspec==0.20.0",
    "multidict==6.7.0",
    "multiprocess==0.70.16",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "ninja==1.13.0",
    "numba==0.61.2",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "openai==1.70.0",
    "opencv-python-headless==4.12.0.88",
    "opentelemetry-api==1.26.0",
    "opentelemetry-exporter-otlp==1.26.0",
    "opentelemetry-exporter-otlp-proto-common==1.26.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.26.0",
    "opentelemetry-exporter-otlp-proto-http==1.26.0",
    "opentelemetry-proto==1.26.0",
    "opentelemetry-sdk==1.26.0",
    "opentelemetry-semantic-conventions==0.47b0",
    "opentelemetry-semantic-conventions-ai==0.4.13",
    "outlines==0.1.11",
    "outlines-core==0.1.26",
    "packaging==25.0",
    "pandas==2.3.1",
    "parso==0.8.5",
    "partial-json-parser==0.2.1.1.post7",
    "peft==0.15.1",
    "pexpect==4.9.0",
    "pillow==12.1.0",
    "platformdirs==4.5.1",
    "plotly==5.24.1",
    "prometheus-client==0.23.1",
    "prometheus-fastapi-instrumentator==7.1.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==3.20.3",
    "psutil==7.2.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-cpuinfo==9.0.0",
    "pyarrow==22.0.0",
    "pycountry==24.6.1",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-extra-types==2.11.0",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pyparsing==3.3.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-json-logger==4.0.0",
    "python-multipart==0.0.21",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==27.1.0",
    "ray==2.53.0",
    "referencing==0.37.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "rich-toolkit==0.17.1",
    "rignore==0.7.6",
    "rpds-py==0.30.0",
    "safetensors==0.7.0",
    "scipy==1.16.3",
    "seaborn==0.13.2",
    "sentencepiece==0.2.1",
    "sentry-sdk==2.48.0",
    "setuptools>=82.0.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "starlette==0.50.0",
    "sympy==1.13.1",
    "tabulate==0.9.0",
    "tenacity==9.1.4",
    "termcolor==3.3.0",
    "tiktoken==0.12.0",
    "tokenizers==0.21.4",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.52.3",
    "triton==3.2.0",
    "trl==0.15.2",
    "typeguard==4.4.4",
    "typer==0.21.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tyro==1.0.3",
    "tzdata==2025.3",
    "unsloth==2025.5.9",
    "unsloth-zoo==2025.6.4",
    "urllib3==2.6.3",
    "uvicorn==0.40.0",
    "uvloop==0.22.1",
    "vllm==0.8.5.post1",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
    "widgetsnbextension==4.0.15",
    "wrapt==2.0.1",
    "xformers==0.0.29.post2",
    "xgrammar==0.1.18",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
]
